# wasm-actor-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/rulesets/: protect_main.json
.github/workflows/: ci.yml
docs/: actor-pattern.md  testing.md
src/: actor.rs  builder.rs  cancel.rs  context.rs  dispatch.rs  error.rs  handle.rs  lib.rs  message.rs  pool.rs  spawn.rs  stream.rs  tests.rs  transfer.rs
