[package]
name          = "wasm-actor-bridge"
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.94"
authors       = ["KoVal177 <58688524+KoVal177@users.noreply.github.com>"]
license       = "MIT OR Apache-2.0"
description   = "Typed, zero-copy Web Worker bridge for Rust/WASM actor systems"
repository    = "https://github.com/KoVal177/wasm-actor-bridge"
homepage      = "https://github.com/KoVal177/wasm-actor-bridge"
documentation = "https://docs.rs/wasm-actor-bridge"
readme        = "README.md"
keywords      = ["wasm", "webworker", "actor", "bridge", "zero-copy"]
categories    = ["wasm", "concurrency"]
exclude       = [".github/", ".llm_instructions/"]

[dependencies]
serde              = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror          = "2"
send_wrapper       = "0.6"
tracing            = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel    = "0.3"
futures-core       = "0.3"
js-sys             = "0.3"
wasm-bindgen   = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "DedicatedWorkerGlobalScope",
    "ErrorEvent",
    "MessageEvent",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }

[lints.rust]
unsafe_code  = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic               = { level = "warn", priority = -1 }
must_use_candidate     = "allow"
missing_errors_doc     = "allow"
unwrap_used            = "deny"
panic                  = "deny"
